# pitwall-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements-streamlit.txt  requirements.txt  streamlit_app.py
.streamlit/: config.toml
apps/backend/: config.py  dependencies.py  main.py
core/analytics/: __init__.py  degradation.py  pace.py  stint.py  strategy.py  trends.py  visualizations.py
core/data/: cli.py  database.py  f1_loader.py  models.py
core/ml/: dataset.py  degradation_model.py  features.py  pit_predictor.py  position_predictor.py
core/simulation/: __init__.py  monte_carlo.py  pit_optimizer.py  race_simulator.py  safety_car.py  weather.py
data/ml/models/: degradation_model.pkl  pit_predictor.pkl  pit_predictor_encoders.pkl  position_encoders.pkl
docs/: schema.md
notebooks/: 01_lap_analysis.ipynb  02_telemetry_exploration.ipynb
pipelines/ingestion/: ingest_season.py  storage.py  validation.py
ui/dashboards/: app.py  theme.py
ui/dashboards/components/: degradation.py  race_overview.py  simulation.py  strategy.py  telemetry.py
