# ──────────────────────────────────────────────────────────────────────────────
# PitWall AI — pyproject.toml
# Single source of truth for project metadata, dependencies, tools, and scripts
# ──────────────────────────────────────────────────────────────────────────────

[build-system]
requires = ["setuptools>=72.0", "wheel"]
build-backend = "setuptools.build_meta"

# ── Project Metadata ───────────────────────────────────────────────────────────

[project]
name = "pitwall-ai"
version = "0.1.0"
description = "Formula 1 race strategy intelligence platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Aric Kaji", email = "kajiaric@gmail.com" }
]
keywords = [
    "formula1", "f1", "motorsport", "race-strategy",
    "data-engineering", "machine-learning", "analytics"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

# Core runtime dependencies — mirrors requirements.txt
dependencies = [
    "fastf1>=3.8.3",
    "pandas>=2.3.3",
    "numpy>=1.26.4",
    "plotly>=5.22.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
]

# ── Optional Dependency Groups ─────────────────────────────────────────────────

[project.optional-dependencies]

# ML stack — installed when doing model work
ml = [
    "scikit-learn>=1.7.2",
    "xgboost>=2.0.3",
]

# Backend stack — installed when building API
api = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
]

# Notebook/exploration stack
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=7.2.0",
    "streamlit>=1.35.0",
]

# Development tools — linting, formatting, testing (Phase 2)
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

# Install everything
all = [
    "pitwall-ai[ml,api,notebook,dev]",
]

# ── CLI Entry Points (Aliases) ─────────────────────────────────────────────────

[project.scripts]
# Phase 1 — test the data loader from terminal
pitwall-load = "core.data.cli:load_command"

# Future phases — uncomment as we build them
# pitwall-serve  = "apps.backend.main:start"
# pitwall-dash   = "ui.dashboards.main:start"
# pitwall-ingest = "pipelines.ingestion.main:run"

# ── Project URLs ───────────────────────────────────────────────────────────────

[project.urls]
Homepage = "https://github.com/Arickaji/pitwall-ai"
Repository = "https://github.com/Arickaji/pitwall-ai"
"Bug Tracker" = "https://github.com/Arickaji/pitwall-ai/issues"

# ── Package Discovery ──────────────────────────────────────────────────────────

[tool.setuptools.packages.find]
# Only include actual Python packages, not data/docs/notebooks
include = ["core*", "pipelines*", "apps*"]
exclude = ["tests*", "notebooks*", "docs*", "data*", "ui*"]

# ── Tool Configuration (Phase 2 will activate these) ──────────────────────────

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — handled by black
    "B008",  # do not perform function calls in default args (FastAPI pattern)
]
exclude = ["notebooks/", "data/", "docs/"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["notebooks/", "data/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["core", "pipelines"]
omit = ["tests/*", "notebooks/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
